<resources>
    <string name="app_name">Design your Coke</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display">Your Design</string>
    <string name="action_complete">Save</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_splash_screen">Coca Cola</string>

    <string name="hello_world">Hello world!</string>
</resources>
