<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:layout_margin="60dp"
        android:elevation="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/brush"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/start_new"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:src="@drawable/new_pic" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/opacity_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:contentDescription="@string/opacity"
            android:src="@drawable/opacity" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:orientation="vertical">

        <!-- Top Row -->

        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF660000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF660000" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF0000" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFFCC00"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFCC00" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF009900"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF009900" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern1"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern1" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern2"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern2" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern3"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern3" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern4"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern4" />
        </LinearLayout>

        <!-- Bottom Row -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF0000FF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF0000FF" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF990099"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF990099" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFFFFF" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF000000" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern5"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern5" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern6"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern6" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern7"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern7" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/pattern8"
                android:contentDescription="pattern"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="pattern8" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_add_white"
        app:backgroundTint="@color/red_e73a3d"
        app:borderWidth="0dp"
        app:elevation="10dp"
        app:fabSize="normal"
        app:pressedTranslationZ="20dp"
        app:rippleColor="@color/red_b00606" />

</android.support.design.widget.CoordinatorLayout>
